--- a/index.html
+++ b/index.html
@@ -6,12 +6,33 @@
     <link rel="stylesheet" href="styles.css">
     <title>Ninja Chat</title>
 </head>
-<body class="bod bg-danger-subtle">
+<body class="bod bg-secondary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">CHAT</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item dropdown">
+                <button class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                  Dropdown
+                </button>
+                <ul class="dropdown-menu dropdown-menu-dark">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
   
 
     <!-- container & title -->
     <div class="container my-4">
-        <h1 class="my-4 text-center">Chat</h1>
         <!-- buttons for chatrooms -->
         <div class="chat-rooms mb-3 text-center">
             <div class="my-2">Choose a chatroom:</div>
@@ -29,9 +50,9 @@
         <form class="new-chat my-3">
             <div class="input-group">
                 <div class="input-group-prepend">
-                    <div class="input-group-text">Your message:</div>
+                    <div class="input-group-text bg-secondary-subtle ">Your message:</div>
                 </div>
-                <input type="text" id="message" class="form-control" required>
+                <input type="text" id="message" class="form-control bg-secondary-subtle border border-secondary" required>
                 <div class="input-group-append">
                     <input type="submit" class="btn btn-outline-success" value="send">
                 </div>
@@ -41,9 +62,9 @@
         <form class="new-name my-3">
             <div class="input-group">
                 <div class="input-group-prepend">
-                    <div class="input-group-text">Update name:</div>
+                    <div class="input-group-text bg-secondary-subtle">Update name:</div>
                 </div>
-                <input type="text" id="name" class="form-control" required>
+                <input type="text" id="name" class="form-control bg-secondary-subtle border border-secondary" required>
                 <div class="input-group-append">
                     <input type="submit" class="btn btn-outline-success" value="update">
                 </div>
@@ -55,14 +76,26 @@
         <form class="new-room my-3">
             <div class="input-group">
                 <div class="input-group-prepend">
-                    <div class="input-group-text">Add new room:</div>
+                    <div class="input-group-text bg-secondary-subtle">Add new room:</div>
                 </div>
-                <input type="text" id="room" class="form-control" required>
+                <input type="text" id="room" class="form-control bg-secondary-subtle border border-secondary" required>
                 <div class="input-group-append">
                     <input type="submit" class="btn btn-outline-success" value="new">
                 </div>
             </div>
         </form>
+
+        <div class="tabs">
+            <ul>
+              <li class="trigger active" data-target="#about">All Rooms</li>
+            </ul>
+            <div id="about" class="content active bg-secondary-subtle">
+              <h3>Rooms already created</h3>
+              <h6>Click room of choice to be added</h6>
+            </div>
+        </div>
+        
+            
 
     </div>
 
