fixed update/addroom mssg

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <!-- container for fixed forms -->
         <div class="fixed-forms-container border-info-subtle">
           <!-- new chat form -->
-          <form class="new-chat my-3 form-group">
+          <form class="new-chat my-2 form-group">
               <div class="input-group">
                   <input type="text" id="message" class="form-control bg-primary-subtle border border-info-subtle" placeholder="message">
                   <div class="input-group-append">
@@ -56,25 +56,25 @@
           </form>
 
           <!-- update name form -->
-          <form class="new-name my-3 form-group">
+          <form class="new-name my-1 form-group">
               <div class="input-group">
                   <input type="text" id="name" class="form-control bg-primary-subtle border border-info-subtle" placeholder="Update Name">
                   <div class="input-group-append">
                       <input type="submit" class="btn btn-outline-info" value="update">
                   </div>
               </div>
-              <div class="update-mssg text-center my-2"></div>
+              <div class="update-mssg my-1"></div>
           </form>
 
           <!-- Add a chatroom -->
-          <form class="new-room my-3 form-group">
+          <form class="new-room my-1 form-group">
               <div class="input-group">
                   <input type="text" id="room" class="form-control bg-primary-subtle border border-info-subtle" placeholder="Add Room" required>
                   <div class="input-group-append">
                       <input type="submit" class="btn btn-outline-info" value="new">
                   </div>
               </div>
-              <div class="addroom-mssg text-center my-2"></div>
+              <div class="addroom-mssg my-1"></div>
           </form>
         </div>
 
